refactor: make dropdown shared component

--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
     "lint:fix": "eslint . --ext .js,.jsx,.ts,.tsx --fix",
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md,css}\"",
     "check-format": "prettier --check \"**/*.{js,jsx,ts,tsx,json,md,css}\""
-
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.4",
+    "@heroicons/react": "^2.2.0",
     "mongodb": "^6.17.0",
     "next": "15.3.3",
     "react": "^19.0.0",
