--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "jotai": "^2.12.5",
     "lucide-react": "^0.542.0",
     "mongodb": "^6.17.0",
+    "motion": "^12.23.12",
     "next": "15.3.3",
     "next-auth": "^4.24.11",
     "react": "^19.0.0",
