--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@heroicons/react": "^2.2.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.23.12",
     "jotai": "^2.12.5",
     "lucide-react": "^0.542.0",
     "mongodb": "^6.17.0",
