--- a/package.json
+++ b/package.json
@@ -21,10 +21,10 @@
     "lucide-react": "^0.542.0",
     "mongodb": "^6.17.0",
     "motion": "^12.23.12",
-    "next": "15.3.3",
+    "next": "^15.5.3",
     "next-auth": "^4.24.11",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1",
     "simplex-noise": "^4.0.3",
     "tailwind-merge": "^3.3.1"
   },
